// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given <PillGroup /> component renders correctly when disabled 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      style={
        {
          "borderRadius": 100,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#00000000",
            "borderRadius": 100,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#dddddd",
              "borderRadius": 100,
              "bottom": 0,
              "left": 0,
              "margin": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "fontFamily": "odido_Paragraph_Strong",
            },
            {
              "color": "#000000",
              "fontSize": 18,
              "letterSpacing": 0.27000001072883606,
              "lineHeight": 28,
            },
            {
              "color": "#999999",
              "flexDirection": "row",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 18,
              "letterSpacing": 0.27000001072883606,
              "lineHeight": 28,
              "pointerEvents": "none",
            },
          ]
        }
        testID="strong"
      >
        one
      </Text>
    </View>
  </View>,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      style={
        {
          "borderRadius": 100,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#00000000",
            "borderRadius": 100,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#dddddd",
              "borderRadius": 100,
              "bottom": 0,
              "left": 0,
              "margin": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "fontFamily": "odido_Paragraph_Strong",
            },
            {
              "color": "#000000",
              "fontSize": 18,
              "letterSpacing": 0.27000001072883606,
              "lineHeight": 28,
            },
            {
              "color": "#999999",
              "flexDirection": "row",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 18,
              "letterSpacing": 0.27000001072883606,
              "lineHeight": 28,
              "pointerEvents": "none",
            },
          ]
        }
        testID="strong"
      >
        two
      </Text>
    </View>
  </View>,
]
`;

exports[`Given <PillGroup /> component renders correctly when no children provided 1`] = `null`;

exports[`Given <PillGroup /> component renders correctly when not disabled 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      style={
        {
          "borderRadius": 100,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#00000000",
            "borderRadius": 100,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#dddddd",
              "borderRadius": 100,
              "bottom": 0,
              "left": 0,
              "margin": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "fontFamily": "odido_Paragraph_Strong",
            },
            {
              "color": "#000000",
              "fontSize": 18,
              "letterSpacing": 0.27000001072883606,
              "lineHeight": 28,
            },
            {
              "color": "#999999",
              "flexDirection": "row",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 18,
              "letterSpacing": 0.27000001072883606,
              "lineHeight": 28,
              "pointerEvents": "none",
            },
          ]
        }
        testID="strong"
      >
        one
      </Text>
    </View>
  </View>,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      style={
        {
          "borderRadius": 100,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#dddddd",
            "borderRadius": 100,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 100,
              "bottom": 0,
              "left": 0,
              "margin": 2,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "fontFamily": "odido_Paragraph_Strong",
            },
            {
              "color": "#000000",
              "fontSize": 18,
              "letterSpacing": 0.27000001072883606,
              "lineHeight": 28,
            },
            {
              "flexDirection": "row",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 18,
              "letterSpacing": 0.27000001072883606,
              "lineHeight": 28,
            },
          ]
        }
        testID="strong"
      >
        two
      </Text>
    </View>
  </View>,
]
`;
